* Mail:   groups.google.com/group/blueprintcss
* News:   bjorkoy.com

----------------------------------------------------------------


Version 0.7 - Date TBD
--
  New features:
    * New directory structure.
    * New compressor script.
    * Compressed version of ie.css.
    * Alternating table row colors.
    * Added class .showgrid to see the grid of any column or container.
  
  Bug fixes:
    * Sidebar alignment in tests/sample.html.
    * Line-height on sub/sup.
    * Clearfix not properly applied to container.
    * Misc validation errors in tests.
    * Proper margin on address.
    * Unwanted bottom margin on nested lists.
    * Form labels with unwanted fancy-type indentation.
    * Proper margin on all form elements.
    * No margins for images in headings.
    * Push-x bottom margin.
    * Vertical align set to middle on tables.

  Misc:
    * Improved structure in print.css.
    * Dual-licensed under MIT and GPL licenses.
    * Cleaned up scripts directory.
    * Changed name of .clear to .clearfix, and
      added .clear (clear:both;) to avoid confusion.


Version 0.6 - 21/9/2007
--
  * Created a new plugin, "iepngfix", that adds support for PNG transparency in IE5.5+ [OFB]
  * Added an IE stylesheet, updated the test files and the readme accordingly [OFB]
  * Re-added improved support for em units [OFB]
  * Lots of minor changes to typography.css and reset.css, provided by Christian Montoya [OFB]
  * Extracted the fancy typography section in typography.css to a new plugin [OFB]
  * Extracted the support for CSS buttons into a new plugin. [OFB]
  * Added new plugin structure. [OFB]
  * Changed some default fonts so that BP works better with ClearType in XP [OFB]
  * Re-added the hack for clearing floats without extra markup. [OFB]
  * Added Changelog.txt to track changes in each release. [GR]
  * Cleaned up and rationalized SVN dir structure. [GR, OFB]
  * print.css : removed reference to 'baseline.png' as it no longer exists. [GR]